--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
             <li>Cuenta</li>
         </ul>
 
-        <button>
-            Buscar
-        </button>
+        <form
+        action="/search">
+        <input type="text" placeholder="Buscar..." name="query">
+            <button type="submit">Buscar</button>
+        </form>
+          
 
-        <button>
+        <button class="boton1">
             Registrarse
         </button>
 
