--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <form class="barra" action="/search">
                 <input type="text" placeholder="Buscar..." name="query">
-                <button class="busqueda" type="submit">Buscar</button>">
+                <button class="busqueda" type="submit">Buscar</button>
             </form>
 
 
@@ -162,15 +162,6 @@
         </footer>
     </main>
 
-        <!-- </main>
-
-
-            <main>
-            </main>
-            <main>
-
-
-            </main> -->
 
 </body>
 
